syntax = "proto3";

option go_package = "./internal/pb;pb";

import "enum_message.proto";

message QueryPaymentRequest {
  string payment_id = 1;
}

message QueryPaymentResponse {
  string payment_id = 1;
  string order_id = 2;
  string user_id = 3;

  double amount = 4;
  string currency = 5;
  PaymentMethod method = 6;

  PaymentStatus status = 7;

  int64 created_at = 8;
  int64 paid_at = 9;
}